<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/burger" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/drawablePadding"
            android:text="@string/business"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hourTitle"
            android:textAlignment="center"
            android:textColor="@color/captionColor"
            android:textSize="@dimen/captionSize"
            android:textStyle="bold" />

        <TextView
            style="@style/Hours"
            android:text="@string/weekdayHours"
            android:textAlignment="center" />

        <TextView
            style="@style/Hours"
            android:text="@string/sundayHours"
            android:textAlignment="center" />

        <TextView
            style="@style/Links"
            android:autoLink="all"
            android:drawableLeft="@drawable/location"
            android:drawableStart="@drawable/location"
            android:text="@string/location" />

        <TextView
            style="@style/Links"
            android:autoLink="all"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:text="@string/phone" />

        <TextView
            style="@style/Links"
            android:autoLink="all"
            android:drawableLeft="@drawable/web"
            android:drawableStart="@drawable/web"
            android:text="@string/web" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textTopMargin"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/captionColor"
            android:textSize="@dimen/captionSize"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>